--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -222,7 +222,6 @@
   padding: 10px 20px;
   gap:30px
 }
-
 /* Login Button */
 .loginDesktop {
   font-size: 20px;
@@ -345,4 +344,11 @@
     width: 100%;
     margin-left: 20px; /* Indent for hierarchy */
   }
+}
+
+.icon {
+  color: white; /* or your theme color */
+  font-size: 30px;
+  cursor: pointer;
+  margin-top: 10px;
 }
